# agentops-control-plane

./: .gitignore  README.md  docker-compose.yml
backend/: Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_operational_pricing.py  0003_add_task_queue_metadata.py  0004_add_quality_queue_status.py  0005_add_model_pricing_provider_model_index.py
backend/app/: main.py
backend/app/agentops/: context.py  cost_calculator.py  manager.py  quality_queue.py  sse_emitter.py  task_queue.py
backend/app/agents/: base.py  parsing.py  registry.py
backend/app/core/: config.py  database.py  enums.py  migrations.py  postgres_validation.py
backend/app/llm/: base.py  client.py  gemini.py  groq.py  ollama.py
backend/app/models/: __init__.py  agent_definition.py  agent_run.py  business_outcome.py  metric.py  model_pricing.py  session.py  task.py
backend/app/outcomes/: calculator.py
backend/app/routers/: catalog.py  deps.py  metrics.py  outcomes.py  runs.py  sessions.py  settings.py  stream.py  tasks.py
backend/app/schemas/: agent_run.py  business_outcome.py  metric.py  session.py  settings.py  task.py
backend/tests/: conftest.py  test_agentops_contract.py  test_agents_langgraph.py  test_agents_single_shot.py  test_backend_hardening.py  test_demo_flow_harness.py  test_demo_seed_data.py  test_imports.py  test_invariants.py  test_llm_client.py  test_migrations.py  test_outcomes.py  test_postgres_validation.py  test_quality_judge.py  test_routers.py  test_seed_pricing.py  test_sse.py  test_task_queue.py
(+51 files in other folders)
